# hpc-dummies

./: .gitignore  README.md
apps/hello/: build_hello_kokkos.sh  build_hello_stdpar.sh  hello_hip.cu  hello_hybrid_mpi_omp.c  hello_omp.c  hello_omp.f90  hello_omp_gpu.c  hello_stdpar.cpp  hello_stdpar.ipynb
apps/matmul/: Make.aocc_aocl  Make.gcc_openblas  Make.intel_mkl  Makefile  build_matmul_kokkos.sh  matmul_blas.cpp  matmul_cuda.cu  matmul_hip.cu  matmul_kokkos_kkblas.cpp  matmul_omp_gpu.cpp  matmul_serial_opt0.cpp  matmul_serial_opt1.cpp  matmul_serial_opt2.cpp
apps/pidarts/: CMakeLists.txt  build_pi_kokkos.sh  pi_hip.cu  pi_kokkos.cpp  pi_kokkos_functor.cpp  pi_mpi.c  pi_omp_safe.c  pi_serial.c
apps/saxpy/: build_saxpy_blas_openblas.sh  build_saxpy_kokkos.sh  build_saxpy_stdpar.sh  icpx_vector_report.sh  saxpy_avx2.cpp  saxpy_avx2.optrpt  saxpy_avx512.cpp  saxpy_avx512.optrpt  saxpy_blas.cpp  saxpy_cuda.cu  saxpy_hip.cu  saxpy_kokkos_functor_original.cpp  saxpy_kokkos_kkblas.cpp  saxpy_omp.c  saxpy_omp.cpp  saxpy_omp_gpu_minimal.cpp  saxpy_omp_omptime.c  saxpy_omp_time_gettime.c  saxpy_omp_time_ompgetwtime.c  saxpy_serial.c  saxpy_serial.cpp  saxpy_serial.optrpt_novec  saxpy_serial_aligned.cpp  saxpy_serial_aligned.optrpt  saxpy_serial_aligned_avx2.optrpt  saxpy_serial_avx2.optrpt  saxpy_serial_avx512.optrpt  saxpy_serial_std.optrpt  saxpy_simd.cpp  saxpy_stdpar.cpp  saxpy_stdpar.ipynb
apps/saxpy2_profile/: CMakeLists.txt  build_saxpy_kokkos.sh  saxpy2_serial.cpp  saxpy2_serial_nested_call.cpp
hello/: CMakeLists.txt  build_hello_kokkos.sh  hello_cuda.cu  hello_hybrid_mpi_omp.c  hello_kokkos.cpp  hello_kokkos_lambda.cpp  hello_omp.c  hello_omp.f90  hello_omp_gpu.c  hello_omp_gpu.f90
matmul/: CMakeLists.txt  build_matmul_kokkos.sh  matmul_cuda.cu  matmul_kokkos.cpp  matmul_kokkos_kkblas.cpp  matmul_omp.cpp  matmul_omp_gpu.cpp  matmul_omp_gpu_minimal.cpp  matmul_serial.cpp
misc/: Makefile.hello_jobstep_hip  build-app-example.sh  cpuid.c  hello_jobstep_hip.cpp  install-caliper.sh  install-kokkos-cpu-mac.sh  install-kokkos-cpu.sh  install-kokkos-kernels-cpu.sh  install-kokkos-kernels.sh  install-kokkos-mac-cpu.sh  install-kokkos-mulan-cpu.sh  install-kokkos-mulan.sh  install-kokkos-tools-mulan.sh  install-kokkos-tools.sh  install-kokkos-zeus.sh  install-kokkos.sh
notes/: mpi-vs-slurm.txt  other-useful-kokkos-repos.txt  profile-commands.sh
pidarts/: CMakeLists.txt  build_pi_kokkos.sh  pi_cuda.cu  pi_hip.cu  pi_hybrid_mpi_omp.c  pi_kokkos.cpp  pi_kokkos_functor.cpp  pi_omp.c  pi_omp_safe.c  pi_serial.c
saxpy/: CMakeLists.txt  build_saxpy_kokkos.sh  compile-tests  profile_commands  saxpy_cublas.cu  saxpy_cuda.cu  saxpy_hip.cu  saxpy_hipblas.cu  saxpy_kokkos.cpp  saxpy_kokkos_functor.cpp  saxpy_kokkos_kkblas.cpp  saxpy_kokkos_lambda.cpp  saxpy_kokkos_lambda_hostview.cpp  saxpy_kokkos_lambda_kktools.cpp  saxpy_mpi.cpp  saxpy_omp.cpp  saxpy_omp_gpu.cpp  saxpy_omp_gpu_minimal.cpp  saxpy_serial.c  saxpy_serial.cpp  saxpy_simd.cpp
saxpy2_profile/: CMakeLists.txt  build_saxpy_kokkos.sh  saxpy_kokkos_caliper.cpp  saxpy_kokkos_lambda_caliper.cpp  saxpy_kokkos_lambda_kktools.cpp  saxpy_kokkos_lambda_profile.cpp  saxpy_omp_profile.cpp
tools/affinity/: jobstep-select.out  jobstep-select.sh  jobstep-single.out  jobstep-single.sh  jobstep.out  jobstep2.out  jobstep2.sh
tools/benchtests/: hpcg.sh  ior.sh  mdtest.sh  osu.sh  stream.sh  stress-ng.sh  supermagic.sh
tools/kokkos/: install-kokkos-mulan-cpu.sh  install-kokkos-setonix-cpu.sh  install-kokkos-setonix-gpu.sh
tools/ldshared/: Makefile  ciao.c  hi.h  main.c  update_ld_cache.sh
tools/ldshared/bis/: ciao.c  hello.c
tools/osu/: bare_all_setonix_GPU_BETA.sh  bare_all_setonix_cpu.sh  bare_all_setonix_cpu_2.sh  bare_all_setonix_cpu_3.sh  install-osu-setonix-ph2GPU.sh  install-osu-setonix-ph2cpu.sh
tools/osu/singularity/: all_sing.sh
tools/osu/singularity_cpu/: all_bare.sh  bare.sh  sing.sh
utils/: Makefile.hello_jobstep_hip  install-kokkos-mulan.sh  jobstep.out  jobstep.sh  jobstep4.out  jobstep4.sh
utils/kokkos/: install-kokkos-kernels.sh  install-kokkos-setonix-cpu.sh  install-kokkos-setonix-gpu.sh  install-kokkos-tools-mulan.sh  install-kokkos-tools.sh
